ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/Claims_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Used to store values for the Claims team app configurations</description>
    <label>Claims Config</label>
</CustomObject>