ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/BLAIRI__c.field-meta.xml
<CustomField>
    <fullName>BLAIRI__c</fullName>
    <label>BLAIRI</label>
    <type>Url</type>
</CustomField>