ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/Case_Create_Offer_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Create_Offer_Template_Id__c</fullName>
    <label>Case Create Offer Template Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>