ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/Commercial_Team_Chatter_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Team_Chatter_Group_Id__c</fullName>
    <description>Chatter Group Id for the Commercial Claims team</description>
    <label>Commercial Team Chatter Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>