ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/Conga_Gen_Doc_Query__c.field-meta.xml
<CustomField>
    <fullName>Conga_Gen_Doc_Query__c</fullName>
    <label>Conga Gen Doc Query</label>
    <length>255</length>
    <type>Text</type>
</CustomField>