ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/Conga_Payment_Request_Query__c.field-meta.xml
<CustomField>
    <fullName>Conga_Payment_Request_Query__c</fullName>
    <label>Conga Payment Request Query</label>
    <type>TextArea</type>
</CustomField>