ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/Conga_Warranty_Query__c.field-meta.xml
<CustomField>
    <fullName>Conga_Warranty_Query__c</fullName>
    <description>Queries for Warranty document generation.</description>
    <label>Conga Warranty Query</label>
    <type>TextArea</type>
</CustomField>