ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/CRCI__c.field-meta.xml
<CustomField>
    <fullName>CRCI__c</fullName>
    <label>CRCI</label>
    <type>Url</type>
</CustomField>