ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/DECRAL__c.field-meta.xml
<CustomField>
    <fullName>DECRAL__c</fullName>
    <description>CLAIMSV2-924 decra logo servlet url</description>
    <label>DECRAL</label>
    <type>Url</type>
</CustomField>