ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/HYLOADI__c.field-meta.xml
<CustomField>
    <fullName>HYLOADI__c</fullName>
    <label>HYLOADI</label>
    <type>Url</type>
</CustomField>