ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/IKOI__c.field-meta.xml
<CustomField>
    <fullName>IKOI__c</fullName>
    <label>IKOI</label>
    <type>Url</type>
</CustomField>