ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/IKOL__c.field-meta.xml
<CustomField>
    <fullName>IKOL__c</fullName>
    <label>IKOL</label>
    <type>Url</type>
</CustomField>