ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/IKOM__c.field-meta.xml
<CustomField>
    <fullName>IKOM__c</fullName>
    <label>IKOM</label>
    <type>Url</type>
</CustomField>