ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/Residential_Team_Chatter_Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Residential_Team_Chatter_Group_Id__c</fullName>
    <description>Stores the Chatter Group Id fro the Residential Team, which is leveraged in Process Builder when posting messages</description>
    <label>Residential Team Chatter Group Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>