ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/SharinPix_Annotate_Permission_Id__c.field-meta.xml
<CustomField>
    <fullName>SharinPix_Annotate_Permission_Id__c</fullName>
    <inlineHelpText>Allows end user to upload images, annotate, crop, resize</inlineHelpText>
    <label>SharinPix Annotate Permission Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>