ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/SharinPix_Read_Only_Permission__c.field-meta.xml
<CustomField>
    <fullName>SharinPix_Read_Only_Permission__c</fullName>
    <inlineHelpText>Used in Lightning Pages to apply a read-only permission</inlineHelpText>
    <label>SharinPix Read Only Permission</label>
    <length>18</length>
    <type>Text</type>
</CustomField>