ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Claims_Config__c/fields/SharinPix_Upload_Only_Permission__c.field-meta.xml
<CustomField>
    <fullName>SharinPix_Upload_Only_Permission__c</fullName>
    <inlineHelpText>For the SharinPix Permission where the Claims team can continue to upload images at any point of the process</inlineHelpText>
    <label>SharinPix Upload Only Permission</label>
    <length>18</length>
    <type>Text</type>
</CustomField>